[package]
name = "minmaxn"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "finding the minimum or maximum n values from an iterable"
authors = ["Jonathan Dönszelmann <jonabent@gmail.com>"]
repository = "https://github.com/jonay2000/minmaxn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
